# bookify

./: README.md  book.docx  bookify.py  pyproject.toml
